--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -130,5 +132,5 @@ dmypy.json
 
 *.iml
 *.xml
-.DS_Store
+*.DS_Store
 .idea/
